--- a/MitosisTimesheet/src/main/webapp/html/project.html
+++ b/MitosisTimesheet/src/main/webapp/html/project.html
@@ -7,6 +7,7 @@
 <lable class="lb-username" ng-model="name">Welcome {{name}}</lable>
 </div> -->
 
+<!-- For testing  -->
 <nav class="navbar navbar-inverse navbar-fixed-top" style="border-bottom: 1px solid gray; background: none;">
   <div class="container-fluid" style="max-width: 100%; background: grey; color: white;">
     <div class="navbar-header">
