--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -53,6 +53,7 @@
     <script src="js/controllers/timesheetController.js"></script>
     <script src="js/controllers/projectController.js"></script>
     <script src="js/controllers/forgotpasswordController.js"></script>
+    <script src="js/controllers/accountController.js"></script>
     <script src="js/datatypevalidation.js"></script>
 </head>
 <body>
