commit for reports

--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -23,6 +23,7 @@
         <li ng-class="{ active: isActive('/timesheet')}"><a ui-sref="timesheet">Home</a></li>
        <!--  <li ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
         <li ng-class="{ active: isActive('/projectmapping')}"><a ui-sref="projectmapping">Team Assignment</a></li> -->
+        <li ng-class="{ active: isActive('/project')}"><a ui-sref="reports">RecordedList</a></li>
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
@@ -72,8 +73,13 @@
     <div class="form-group btn-formproject">
     <button type="submit" class="btn btn-primary">Add</button>
 	<button type="reset" style="margin-left: 8px;"  class="btn btn-primary">Clear</button>
+
+	
 	</div> 
   </form>
+  
+  	<button style="margin-left: 8px;" ng-click="timesheetreport()" class="btn btn-primary">list</button>
+ 
 </div>
 <table class="table" style="">
 	<thead class="thead-mit-ts">
