--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -55,6 +55,7 @@
     <script src="js/controllers/forgotpasswordController.js"></script>
     <script src="js/controllers/accountController.js"></script>
     <script src="js/datatypevalidation.js"></script>
+    <script src="js/controllers/reportsController.js"></script>
 </head>
 <body>
 <body ng-app="myApp" style="background: #f2f2f2;">
