--- a/MitosisTimesheet/src/main/webapp/html/account.html
+++ b/MitosisTimesheet/src/main/webapp/html/account.html
@@ -54,7 +54,7 @@
 	    <span class="glyphicon glyphicon-pencil"></span> Edit
 	    </button>
 	    <input type="submit" class="btn btn-primary btn-xs btn-profile-save" value="Save"></input>
-	    <button class="btn btn-primary btn-xs btn-profile-cancel">Cancel</button>
+	     <input type="button" class="btn btn-primary btn-xs btn-profile-cancel" ng-click="cancel()" value="Cancel"></input>
       </div>
     </div>
     <hr style="border: grey;">
@@ -105,13 +105,13 @@ $(".btn-profile-edit").click(function() {
 	$('.btn-profile-save').show();
 	$('.btn-profile-cancel').show();
 });
-$(".btn-profile-cancel").click(function() {
+/* $(".btn-profile-cancel").click(function() {
 	$(".span-profile").show();
 	$(".edit-profile").hide();
 	$('.btn-profile-edit').show();	
 	$('.btn-profile-save').hide();
 	$('.btn-profile-cancel').hide();
-});
+}); */
 $(".btn-pwdchange").click(function() {
 	$(".password-change").toggle();
 });
