--- a/MitosisTimesheet/src/main/webapp/html/report.html
+++ b/MitosisTimesheet/src/main/webapp/html/report.html
@@ -1,7 +1,72 @@
- <div ng-init="dates()" class="form-group" ng-controller="reportsController" >
- <form ng-submit="recordedList()">
-   From date :<input type="text" required class="form-control" ui-date="dateOptions" ui-date-format="yy-mm-dd" ng-model="timesheet.fromdate"><br/>
-   To date  : <input type="text" required class="form-control" ui-date="dateOptions" ui-date-format="yy-mm-dd" ng-model="timesheet.todate"><br/>
-   <input type="submit" value="generate" ></input>
-   </form>
+
+<div ng-init="list()">
+<nav class="navbar navbar-inverse navbar-fixed-top" style="border-bottom: 1px solid gray; background: none;">
+  <div class="container-fluid" style="max-width: 100%; background: grey; color: white;">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
+      <div class="logo"><img src="images/mit_lg-ts.jpg"></div>
     </div>
+    <div class="collapse navbar-collapse" id="myNavbar" ng-controller="HeaderController">
+      <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
+        <li ng-class="{ active: isActive('/timesheet')}"><a ui-sref="timesheet">Home</a></li>
+       <!--  <li ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
+        <li ng-class="{ active: isActive('/projectmapping')}"><a ui-sref="projectmapping">Team Assignment</a></li> -->
+        <li ng-class="{ active: isActive('/report')}"><a ui-sref="report">Report</a></li>
+        </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
+        <li><button class="btn btn-sm btn-primary btn-logout" ng-click="logout();">Logout</button></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div ng-controller="reportsController" class="container" style="margin-top: 7%;">
+	<div class="row">
+	<div class="col-xs-12">
+	<h2 style="text-align: center;">Report Generation</h2>
+	</div>
+	</div>
+	<form class="form-inline" role="form">
+	<div  class="row" style="margin-top: 2%;">
+	<div class="col-xs-12 col-sm-4">
+	<label>Select Project</label>
+	<select class="form-control" style="" ng-model="project">
+	<option>Project</option>
+	<option>Mitosis Heartbeat</option>
+	<option>BCM</option>
+	</select>	
+	</div>
+	<div class="col-xs-12 col-sm-4" ng-init="dates()">
+	<label>From Date </label>
+	<input type="text" name="fromdate" required class="form-control" ui-date="dateOptions" ui-date-format="yy-mm-dd" ng-model="timesheet.fromdate">	
+	</div>
+	<div class="col-xs-12 col-sm-4">
+	<label>To Date</label>
+	<input type="text" name="todate" required class="form-control" ui-date="dateOptions" ui-date-format="yy-mm-dd" ng-model="timesheet.todate">	
+	</div>
+	</div>
+	<div class="row" style="margin-top: 3%;">
+	<div class="col-xs-4 col-sm-4 col-lg-2 col-md-2">
+	<button type="submit" name="summary" class="btn btn-primary btn-sm" ng-click="summaryreport()" style="width: 135px; font-size: 15px;">Summary</button>
+	
+
+	</div>
+	<div class="col-xs-4 col-sm-4 col-lg-3 col-md-3">
+	<button type="submit" name="detail" class="btn btn-primary btn-sm" ng-click="detailreport()" style="width: 135px; font-size: 15px;">Detail</button>
+	</div>
+	</div>
+	</form>
+	
+   
+</div>
+
+</div>
+<script>
+
+
+</script>
