--- a/MitosisTimesheet/src/main/webapp/html/individualreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/individualreport.html
@@ -15,7 +15,12 @@
         <li ng-class="{ active: isActive('/timesheet')}"><a ui-sref="timesheet">Home</a></li>
        <!--  <li ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
         <li ng-class="{ active: isActive('/projectmapping')}"><a ui-sref="projectmapping">Team Assignment</a></li> -->
-        <li ng-class="{ active: isActive('/report')}"><a ui-sref="report">Report</a></li>
+       <li ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            <li><a ui-sref="individualreport" href="#">Individual Reports</a></li>
+            <li><a href="#">Team Reports</a></li>
+          </ul>
+        </li>
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
@@ -25,22 +30,22 @@
   </div>
 </nav>
 
-<div ng-controller="reportsController" class="container" style="margin-top: 7%;">
+<div ng-controller="individualreportController" class="container" style="margin-top: 7%;">
 	<div class="row">
 	<div class="col-xs-12">
-	<h2 style="text-align: center;">Report Generation</h2>
+	<h2 style="text-align: center;">Individual Report generation</h2>
 	</div>
 	</div>
 	<form class="form-inline" role="form">
 	<div  class="row" style="margin-top: 2%;">
-	<div class="col-xs-12 col-sm-4">
+<!-- 	<div class="col-xs-12 col-sm-4">
 	<label>Select Project</label>
 	<select class="form-control" style="" ng-model="project">
 	<option>Project</option>
 	<option>Mitosis Heartbeat</option>
 	<option>BCM</option>
 	</select>	
-	</div>
+	</div> -->
 	<div class="col-xs-12 col-sm-4" ng-init="dates()">
 	<label>From Date </label>
 	<input type="text" name="fromdate" required class="form-control" ui-date="dateOptions" ui-date-format="yy-mm-dd" ng-model="timesheet.fromdate">	
