commit for report changes

--- a/MitosisTimesheet/src/main/webapp/html/individualreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/individualreport.html
@@ -48,11 +48,11 @@
 	</div> -->
 	<div class="col-xs-12 col-sm-4" ng-init="dates()">
 	<label>From Date </label>
-	<input type="text" name="fromdate" required class="form-control" ui-date="dateOptions" ui-date-format="yy-mm-dd" ng-model="timesheet.fromdate">	
+	<input type="text" name="fromdate" required class="form-control" ui-date="dateOptions" ui-date-format="dd-mm-yy" ng-model="timesheet.fromdate">	
 	</div>
 	<div class="col-xs-12 col-sm-4">
 	<label>To Date</label>
-	<input type="text" name="todate" required class="form-control" ui-date="dateOptions" ui-date-format="yy-mm-dd" ng-model="timesheet.todate">	
+	<input type="text" name="todate" required class="form-control" ui-date="dateOptions" ui-date-format="dd-mm-yy" ng-model="timesheet.todate">	
 	</div>
 	</div>
 	<div class="row" style="margin-top: 3%;">
