commit for team assignment changes

--- a/MitosisTimesheet/src/main/webapp/html/authority.html
+++ b/MitosisTimesheet/src/main/webapp/html/authority.html
@@ -20,7 +20,7 @@
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable>Welcome Administrator</lable></li>
-        <li><a style="padding-left: 0;" ui-sref="account"><button class="btn btn-sm btn-primary">Account</button></a></li>
+<!--         <li><a style="padding-left: 0;" ui-sref="account"><button class="btn btn-sm btn-primary">Account</button></a></li> -->
         <li><button class="btn btn-sm btn-primary btn-logout" ng-click="logout();">Logout</button></li>
       </ul>
     </div>
