commit for team details

--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -25,8 +25,8 @@
         <li ng-class="{ active: isActive('/projectmapping')}"><a ui-sref="projectmapping">Team Assignment</a></li> -->
         <li ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
         <ul class="dropdown-menu">
-            <li><a ui-sref="individualreport" href="#">Individual Reports</a></li>
-            <li><a href="#">Team Reports</a></li>
+            <li><a ui-sref="individualreport">Individual Reports</a></li>
+            <li><a ui-sref="teamreport">Team Reports</a></li>
           </ul>
         </li>
         </ul>
