--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -56,6 +56,7 @@
     <script src="js/controllers/accountController.js"></script>
     <script src="js/datatypevalidation.js"></script>
     <script src="js/controllers/individualreportController.js"></script>
+    <script src="js/controllers/teamreportController.js"></script>
 </head>
 <body>
 <body ng-app="myApp" style="background: #f2f2f2;">
