--- a/MitosisTimesheet/src/main/webapp/html/teamreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamreport.html
@@ -17,7 +17,7 @@
         <li ng-class="{ active: isActive('/projectmapping')}"><a ui-sref="projectmapping">Team Assignment</a></li> -->
        <li ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
         <ul class="dropdown-menu">
-            <li><a ui-sref="individualreport" >Individual Reports</a></li>
+            <li><a ui-sref="individualreport">Individual Reports</a></li>
             <li><a ui-sref="teamreport">Team Reports</a></li>
           </ul>
         </li>
@@ -30,22 +30,20 @@
   </div>
 </nav>
 
-<div ng-controller="individualreportController" class="container" style="margin-top: 7%;">
+<div ng-controller="teamreportController" class="container" style="margin-top: 7%;">
 	<div class="row">
 	<div class="col-xs-12">
-	<h2 style="text-align: center;">Individual Report generation</h2>
+	<h2 style="text-align: center;">Team Report generation</h2>
 	</div>
 	</div>
 	<form class="form-inline" role="form">
 	<div  class="row" style="margin-top: 2%;">
-<!-- 	<div class="col-xs-12 col-sm-4">
+	<div class="col-xs-12 col-sm-4">
 	<label>Select Project</label>
-	<select class="form-control" style="" ng-model="project">
-	<option>Project</option>
-	<option>Mitosis Heartbeat</option>
-	<option>BCM</option>
-	</select>	
-	</div> -->
+	<select  class="form-control" required ng-model="project" ng-options="item as item.projectName for item in projectlist" style="color: #777777;">
+    <option value="">Select Project</option>
+	</select> 
+	</div> 
 	<div class="col-xs-12 col-sm-4" ng-init="dates()">
 	<label>From Date </label>
 	<input type="text" name="fromdate" required class="form-control" ui-date="dateOptions" ui-date-format="dd-mm-yy" ng-model="timesheet.fromdate">	
