commit for changes

--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -54,6 +54,8 @@
     <script src="js/controllers/projectController.js"></script>
     <script src="js/controllers/forgotpasswordController.js"></script>
     <script src="js/controllers/accountController.js"></script>
+   <script src="js/controllers/teamAssignmentController.js"></script>
+    <script src="js/controllers/userRightsController.js"></script>
     <script src="js/datatypevalidation.js"></script>
 </head>
 <body>
