--- a/MitosisTimesheet/src/main/webapp/html/project.html
+++ b/MitosisTimesheet/src/main/webapp/html/project.html
@@ -74,7 +74,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="sheet in filteredParticipantsResults">
+		<tr ng-repeat="sheet in filteredParticipantsResults | orderBy:asc">
 			<td >
 				<span ng-show="!showEdit">{{sheet.projectName}}</span>
 				<span ng-show="showEdit" ><input class="form-control" id={{sheet.projectId}} type="text" ng-model="sheet.projectName"  ng-blur="onBlur(sheet.projectId)"></span>
