--- a/MitosisTimesheet/src/main/webapp/html/account.html
+++ b/MitosisTimesheet/src/main/webapp/html/account.html
@@ -1,5 +1,4 @@
-
-<div ng-init="list()">
+<div ng-controller="accountController" ng-init="accountList()">
 <nav class="navbar navbar-inverse navbar-fixed-top" style="border-bottom: 1px solid gray; background: none;">
   <div class="container-fluid" style="max-width: 100%; background: grey; color: white;">
     <div class="navbar-header">
@@ -13,8 +12,8 @@
     <div class="collapse navbar-collapse" id="myNavbar" ng-controller="HeaderController">
       <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
         <li ng-class="{ active: isActive('/timesheet')}"><a ui-sref="timesheet">Home</a></li>
-        <li ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
-        <li ng-class="{ active: isActive('/teamAssignment')}"><a ui-sref="teamAssignment">Team Assignment</a></li>
+     <!--    <li ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
+        <li ng-class="{ active: isActive('/projectmapping')}"><a ui-sref="projectmapping">Team Assignment</a></li> -->
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
@@ -24,38 +23,91 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 style="margin-left: 3%;">My Account</h2>
-<button class="btn btn-xs btn-primary" style="float: right; margin-top: 3%; margin-right: 5%;">Edit</button>
-</div></div></div>
+<div class="container" style="margin-top: 7%;">
+	<h2 style="margin-left: 0;">My Account</h2>
+	
+   <div class="form-profile" style="margin-top: 10%;">
+    <form class="form-horizontal" role="form" ng-submit="edituserdetails()">
+    <div class="form-group">
+      <label class="control-label col-sm-2">Full Name:</label>
+      <div class="col-sm-10 col-md-4 col-lg-4 profile-value">
+      	<span class="span-profile"> {{name}}</span>
+        <input class="form-control edit-profile" type="text" required ng-model="name">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2">Email Address:</label>
+      <div class="col-sm-10 col-md-4 col-lg-4 profile-value">  
+        <span class="span-profile"> {{email}}</span>        
+        <input class="form-control edit-profile" type="text" required ng-model="email">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="pwd">User Name:</label>
+      <div class="col-sm-10 col-md-4 col-lg-4 profile-value">          
+        <span> {{username}}</span>
+      </div>
+    </div>
+     <div class="form-group">        
+      <div class="col-sm-offset-2 col-sm-10">
+        <button type="button" class="btn btn-primary btn-xs btn-profile-edit">
+	    <span class="glyphicon glyphicon-pencil"></span> Edit
+	    </button>
+	    <input type="submit" class="btn btn-primary btn-xs btn-profile-save" value="Save"></input>
+	    <input type="button" class="btn btn-primary btn-xs btn-profile-cancel" ng-click="cancel()" value="Cancel"></input>
+      </div>
+    </div>
+    <hr style="border: grey;">
+    <div class="col-xs-12" style="margin-top: 20px;"><p style="float: left;  margin-right: 20px; padding-top: 5px; ">To Change Password Click</p><button type="button" class="btn btn-primary btn-xs btn-pwdchange">
+	Change Password</button></div>
+  	</form>
+    </div>
+	
+	<div class="password-change col-xs-12" style="padding: 0; display: none;">
+	<p style="color: gray; font-size: 17px;">Change Password </p>
+	<form class="form-horizontal" role="form" ng-submit="changepassword()">
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="email">Current Password:</label>
+      <div class="col-sm-10 col-md-4 col-lg-4">
+        <input type="password" required class="form-control" id="password">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="pwd">New Password:</label>
+      <div class="col-sm-10 col-md-4 col-lg-4">          
+        <input type="password" required class="form-control" id="newpassword">
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="control-label col-sm-2" for="pwd">Confirm Password:</label>
+      <div class="col-sm-10 col-md-4 col-lg-4">          
+        <input type="password" required class="form-control" id="confirmpassword">
+      </div>
+    </div>
+    <div class="form-group">        
+      <div class="col-sm-offset-2 col-sm-10">
+        <input type="submit" class="btn btn-primary btn-xs" value="Save"></input>
+      </div>
+    </div>
+    </form>
+	</div>
+</div>
 
-<div class="container">
-<div class="row">
-<div class="col-xs-12">
-<div class="account-setings" style="margin: 4%; font-size: 17px;">
-<label style="float: left; width: 200px;">Full Name </label> <p><span>:</span> Ram Gopal Varma</p><br>
-<label style="float: left; width: 200px;">Email Address </label> <p><span>:</span> rmv@gmail.com</p> <br>
-<label style="float: left; width: 200px;">Username </label> <p><span>:</span> ram</p>
-<hr style="border: 1px solid grey;"><br>
-<p>To Change the Password </p> 
-<div class="password-change col-xs-12 col-sm-6 col-md-6" style="padding: 0;">
-<form>
-	<div>
-	<div class="form-group">
-       <input type="password" id="hours" required class="form-control" placeholder="Current Password">
-    </div>
-    <div class="form-group">
-       <input type="password" required class="form-control" placeholder="New Password">
-    </div>
-    <div class="form-group">
-       <input type="password" required class="form-control" placeholder="Confirm Password">
-    </div>
-    <div class="form-group">
-	<button type="submit" class="btn btn-primary btn-sm">Save</button>
-	</div>
-	</div>
-</form>
+
 </div>
-</div>
-</div>
-</div>
-</div>
+<div class="alert-msg col-xs-12 col-sm-6" style="margin-left: 23%; margin-top: 0%; display: b"><p class="alert-success">fy</p></div>
+<div class="alert-msg1 col-xs-12 col-sm-6" style="margin-left: 23%; margin-top: 0%;"><p class="alert-danger"></p></div>
+<script>
+$(".btn-profile-edit").click(function() {
+	$(".span-profile").hide();
+	$(".edit-profile").show();
+	$('.btn-profile-edit').hide();	
+	$('.btn-profile-save').show();
+	$('.btn-profile-cancel').show();
+});
+
+$(".btn-pwdchange").click(function() {
+	$(".password-change").toggle();
+});
+
+</script>
