commit for reports

--- a/MitosisTimesheet/src/main/webapp/html/teamreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamreport.html
@@ -24,13 +24,13 @@
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
-        <li><button class="btn btn-sm btn-primary btn-logout" ng-click="logout();">Logout</button></li>
+        <li><button class="btn btn-sm btn-primary btn-logout" ng-click="logout()">Logout</button></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div ng-controller="teamreportController" class="container" style="margin-top: 7%;">
+<div class="container" style="margin-top: 7%;">
 	<div class="row">
 	<div class="col-xs-12">
 	<h2 style="text-align: center;">Team Report generation</h2>
