--- a/MitosisTimesheet/src/main/webapp/html/individualreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/individualreport.html
@@ -24,7 +24,7 @@
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
-        <li><button class="btn btn-sm btn-primary btn-logout" ng-click="logout();">Logout</button></li>
+        <li><button class="btn btn-sm btn-primary btn-logout" ng-click="logout()">Logout</button></li>
       </ul>
     </div>
   </div>
