--- a/MitosisTimesheet/src/main/webapp/html/account.html
+++ b/MitosisTimesheet/src/main/webapp/html/account.html
@@ -45,7 +45,8 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">User Name:</label>
       <div class="col-sm-10 col-md-4 col-lg-4 profile-value">          
-        <span> {{username}}</span>
+        <span class="span-profile"> {{username}}</span>
+         <input class="form-control edit-profile" type="text" required ng-model="username">
       </div>
     </div>
      <div class="form-group">        
