commit for team assignment changes

--- a/MitosisTimesheet/src/main/webapp/html/teamAssignment.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamAssignment.html
@@ -1,5 +1,5 @@
 
-<div ng-init="teamList()">
+<div>
 <!-- <div class="top-fixed">
 <div class="logo"><img src="images/mt1.png"></div>
 <h2>Project Mapping</h2>
