--- a/MitosisTimesheet/src/main/webapp/html/teamreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamreport.html
@@ -39,9 +39,9 @@
 	<form class="form-inline" role="form">
 	<div  class="row" style="margin-top: 2%;">
 	<div class="col-xs-12 col-sm-4">
-	<label>Select Project</label>
+	<label>Project</label>
 	<select  class="form-control" required ng-model="project" ng-options="item as item.projectName for item in projectlist" style="color: #777777;">
-    <option value="">Select Project</option>
+    <option value="">Project</option>
 	</select> 
 	</div> 
 	<div class="col-xs-12 col-sm-4" ng-init="dates()">
