commit for conflicts

--- a/MitosisTimesheet/src/main/webapp/html/account.html
+++ b/MitosisTimesheet/src/main/webapp/html/account.html
@@ -12,8 +12,8 @@
     <div class="collapse navbar-collapse" id="myNavbar" ng-controller="HeaderController">
       <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
         <li ng-class="{ active: isActive('/timesheet')}"><a ui-sref="timesheet">Home</a></li>
-        <li ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
-        <li ng-class="{ active: isActive('/projectmapping')}"><a ui-sref="projectmapping">Team Assignment</a></li>
+     <!--    <li ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
+        <li ng-class="{ active: isActive('/projectmapping')}"><a ui-sref="projectmapping">Team Assignment</a></li> -->
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
@@ -45,7 +45,8 @@
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">User Name:</label>
       <div class="col-sm-10 col-md-4 col-lg-4 profile-value">          
-        <span> {{username}}</span>
+        <span class="span-profile"> {{username}}</span>
+         <input class="form-control edit-profile" type="text" required ng-model="username">
       </div>
     </div>
      <div class="form-group">        
@@ -54,7 +55,7 @@
 	    <span class="glyphicon glyphicon-pencil"></span> Edit
 	    </button>
 	    <input type="submit" class="btn btn-primary btn-xs btn-profile-save" value="Save"></input>
-	     <input type="button" class="btn btn-primary btn-xs btn-profile-cancel" ng-click="cancel()" value="Cancel"></input>
+	    <input type="button" class="btn btn-primary btn-xs btn-profile-cancel" ng-click="cancel()" value="Cancel"></input>
       </div>
     </div>
     <hr style="border: grey;">
@@ -105,13 +106,7 @@ $(".btn-profile-edit").click(function() {
 	$('.btn-profile-save').show();
 	$('.btn-profile-cancel').show();
 });
-/* $(".btn-profile-cancel").click(function() {
-	$(".span-profile").show();
-	$(".edit-profile").hide();
-	$('.btn-profile-edit').show();	
-	$('.btn-profile-save').hide();
-	$('.btn-profile-cancel').hide();
-}); */
+
 $(".btn-pwdchange").click(function() {
 	$(".password-change").toggle();
 });
