commit for reports change

--- a/MitosisTimesheet/src/main/webapp/html/teamreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamreport.html
@@ -40,7 +40,7 @@
 	<div  class="row" style="margin-top: 2%;">
 	<div class="col-xs-12 col-sm-4">
 	<label>Project</label>
-	<select  class="form-control" required ng-model="project" ng-options="item as item.projectName for item in projectlist" style="color: #777777;">
+	<select  class="form-control" required ng-model="project" ng-options="item as item.project.projectName for item in projectlist" style="color: #777777;">
     <option value="">Project</option>
 	</select> 
 	</div> 
