--- a/MitosisTimesheet/src/main/webapp/html/teamreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamreport.html
@@ -55,12 +55,12 @@
 	</div>
 	<div class="row" style="margin-top: 3%;">
 	<div class="col-xs-4 col-sm-4 col-lg-2 col-md-2">
-	<button type="submit" name="summary" class="btn btn-primary btn-sm" ng-click="summaryreport()" style="width: 135px; font-size: 15px;">Summary</button>
+	<button type="submit" name="summary" class="btn btn-primary btn-sm" ng-click="checkUserRightsByProjectForSummary()" style="width: 135px; font-size: 15px;">Summary</button>
 	
 
 	</div>
 	<div class="col-xs-4 col-sm-4 col-lg-3 col-md-3">
-	<button type="submit" name="detail" class="btn btn-primary btn-sm" ng-click="detailreport()" style="width: 135px; font-size: 15px;">Detail</button>
+	<button type="submit" name="detail" class="btn btn-primary btn-sm" ng-click="checkUserRightsByProjectForDetails()" style="width: 135px; font-size: 15px;">Detail</button>
 	</div>
 	</div>
 	</form>
@@ -69,7 +69,6 @@
 </div>
 
 </div>
-<script>
 
-
-</script>
+<div class="alert-msg col-xs-12 col-sm-6"><p class="alert-success"></p></div>
+ <div class="alert-msg1 col-xs-12 col-sm-6"><p class="alert-danger"></p></div>
