--- a/MitosisTimesheet/src/main/webapp/html/project.html
+++ b/MitosisTimesheet/src/main/webapp/html/project.html
@@ -1,13 +1,6 @@
 
 <div ng-init="list()">
-<!-- <div class="top-fixed">
-<div class="logo"><img src="images/mt1.png"></div>
-<h2>Project Details</h2>
-<button class="btn btn-sm btn-primary btn-logout" ng-click="logout();">Logout</button>
-<lable class="lb-username" ng-model="name">Welcome {{name}}</lable>
-</div> -->
 
-<!-- For testing  -->
 <nav class="navbar navbar-inverse navbar-fixed-top" style="border-bottom: 1px solid gray; background: none;">
   <div class="container-fluid" style="max-width: 100%; background: grey; color: white;">
     <div class="navbar-header">
@@ -23,6 +16,12 @@
         <li ng-class="{ active: isActive('/timesheet')}"><a ui-sref="timesheet">Home</a></li>
         <li ng-show="manageProject" ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
         <li ng-show="manageTeam" ng-class="{ active: isActive('/teamAssignment')}"><a ui-sref="teamAssignment">Team Assignment</a></li>
+        <li ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
+       <ul class="dropdown-menu">
+            <li><a ui-sref="individualreport">Individual Reports</a></li>
+            <li><a ui-sref="teamreport">Team Reports</a></li>
+          </ul>
+        </li>
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
@@ -95,11 +94,7 @@
 				<span style="color: red" ng-show="sheet.billable == '' || sheet.billable == undefined">Required</span>
 			</td>
 			<td style="word-spacing: 15px;">
-			<!-- 	<image src="images/pencil.png" ng-click="showEdit = !showEdit" ng-show="!showEdit"></image>
-				<image src="images/delete.png" ng-click="confirmDelete(sheet.projectId)" ng-show="!showEdit"></image>
-				<image src="images/save-icon.png" ng-click="showEdit = !showEdit;updateproject(sheet)" ng-show="showEdit" ng-disabled="check(sheet);"></image>
-				<image src="images/cancel.jpg" ng-click="showEdit = !showEdit" ng-show="showEdit"></image>
-		 -->
+			
 		        <a><span class="glyphicon glyphicon-pencil" ng-click="showEdit = !showEdit" ng-show="!showEdit"></span></a>
 				<a><span class="glyphicon glyphicon-remove" ng-click="confirmDelete(sheet.projectId)" ng-show="!showEdit"></span></a>
 				<a><span class="glyphicon glyphicon-ok" ng-click="showEdit = !showEdit;updateproject(sheet)" ng-show="showEdit" ng-disabled="check(sheet);"></span></a> 
