--- a/MitosisTimesheet/src/main/webapp/html/individualreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/individualreport.html
@@ -65,6 +65,9 @@
 </div>
 
 </div>
+<div class="alert-msg col-xs-12 col-sm-6"><p class="alert-success"></p></div>
+ <div class="alert-msg1 col-xs-12 col-sm-6"><p class="alert-danger"></p></div>
+
 <script>
 
 
