--- a/MitosisTimesheet/src/main/webapp/html/project.html
+++ b/MitosisTimesheet/src/main/webapp/html/project.html
@@ -39,25 +39,41 @@
 <div class="row">
 <div class="col-xs-12 col-lg-12">
 <div class="project-form-div">
-<form class="form-inline project-form" role="form" id="addEntry" ng-submit="addproject(projectname,customername,billable)">		
+<form class="form-inline project-form" role="form" id="addEntry" ng-submit="addproject(projectname,customername,billable,startDate,endDate,taskstatus)"">		
 
-	<div class="form-group">
-       <input type="text" id="name" required class="form-control"  ng-model="project.projectname" placeholder="Project Name">
-    </div>
+	<div class="form-group"> 
+       <input type="text" auto-complete ui-items="projectnames" id="name" required class="form-control"  ng-model="project.projectname" placeholder="Project Name"></input>
+     </div>
 	<div class="form-group">
        <input type="text" required id="customer" class="form-control" ng-model="project.customername" onkeypress="return ValidateAlpha(event)" placeholder="Customer">
     </div>
     <div class="form-group" style="word-spacing: 0;">
-    <span for="dropdown"  style="font-size: 20px;">Billable</span>
+   <!--  <span for="dropdown"  style="font-size: 20px;">Billable</span> -->
     <select class="form-control" required ng-model="project.billable">
+     <option value="" selected disabled>Billable</option>
 	<option>Yes</option>
 	<option>No</option>
+	</select>
+	</div>
+	<div ng-init="dates()" class="form-group">
+    <input type="text" id="startDate" placeholder="Start Date" required class="form-control" ui-date="dateOptions" ng-change="startdatechange(startDate)" ui-date-format="dd-mm-yy" ng-model="project.startDate">
+    </div>
+    <div ng-init="dates()" class="form-group">
+    <input type="text" id="endDate" placeholder="End Date" required class="form-control" ui-date="dateOptions" ui-date-format="dd-mm-yy" ng-model="project.endDate">
+    </div>
+    <div class="form-group" style="word-spacing: 0;">
+    <!-- <span for="dropdown"  style="font-size: 20px;">Project Status</span> -->
+    <select class="form-control" required ng-model="project.status">
+    <option value="" selected disabled>Status</option>
+	<option>Open</option>
+	<option>Closed</option>
 	</select>
 	</div>
 	<div class="form-group btn-formproject">
 	<button type="submit" class="btn btn-primary">Add</button>
 	<button type="reset" style="margin-left: 10px;"  class="btn btn-primary">Clear</button>
 	</div>
+	 
 	</form>
 </div>
 </div>
