--- a/MitosisTimesheet/src/main/webapp/html/leaveDetails.html
+++ b/MitosisTimesheet/src/main/webapp/html/leaveDetails.html
@@ -36,11 +36,11 @@
     </div>
 	
     <div ng-init="dates()" class="form-group">
-       <input type="text" id="fromDate" placeholder="From Date" required class="form-control" ui-date="dateOptions" ng-change="fromdatechange(fromDate)" ui-date-format="dd-mm-yy" ng-model="fromDate">
+       <input type="text" id="fromDate" placeholder="From Date" required class="form-control" ui-date="dateOptionsFrom" ng-change="fromdatechange(fromDate)" ui-date-format="dd-mm-yy" ng-model="fromDate">
     </div> 
     
     <div ng-init="dates()" class="form-group">
-       <input type="text" placeholder="To Date" required class="form-control" ui-date="dateOptions" ui-date-format="dd-mm-yy" ng-model="toDate">
+       <input type="text" placeholder="To Date" required class="form-control" ui-date="dateOptionsTo" ui-date-format="dd-mm-yy" ng-model="toDate">
     </div> 
     
     <div class="form-group">
