--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -1,5 +1,5 @@
 
-<div ng-init="list();allProjectList();">
+<div ng-init="list();">
 
 <nav class="navbar navbar-inverse navbar-fixed-top" style="border-bottom: 1px solid gray; background: none;">
   <div class="container-fluid" style="max-width: 100%; background: grey; color: white;">
