--- a/MitosisTimesheet/src/main/webapp/html/project.html
+++ b/MitosisTimesheet/src/main/webapp/html/project.html
@@ -45,13 +45,13 @@
        <input type="text" auto-complete ui-items="projectnames" id="name" required class="form-control"  ng-model="project.projectname" placeholder="Project Name"></input>
      </div>
 	<div class="form-group">
-    <select id="customer" class="form-control" required ng-model="customer" ng-options="item as item.customerName for item in customerlist"  style="color: #777777;">
+    <select id="customer" class="form-control select" required ng-model="customer" ng-options="item as item.customerName for item in customerlist"  style="color: #777777;">
     <option value="">Customer</option>
     </select> 
     </div>
     <div class="form-group" style="word-spacing: 0;">
    <!--  <span for="dropdown"  style="font-size: 20px;">Billable</span> -->
-    <select class="form-control" required ng-model="project.billable">
+    <select class="form-control select" required ng-model="project.billable">
      <option value="" selected disabled>Billable</option>
 	<option>Yes</option>
 	<option>No</option>
@@ -65,7 +65,7 @@
     </div>
     <div class="form-group" style="word-spacing: 0;">
     <!-- <span for="dropdown"  style="font-size: 20px;">Project Status</span> -->
-    <select class="form-control" required ng-model="project.status">
+    <select class="form-control select" required ng-model="project.status">
     <option value="" selected disabled>Status</option>
 	<option>Open</option>
 	<option>Closed</option>
@@ -80,8 +80,10 @@
 </div>
 </div>
 </div>
-</div>
 <div class="container" style="width: 100%;">
+<div class="search-tab"> 
+	       <input type="text" id="search" required class="form-control"  ng-model="search" placeholder="Search"></input>
+</div>
 <table class="table">
 	<thead class="thead-mit-ts" >
 		<tr>
@@ -95,7 +97,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="sheet in filteredParticipantsResults | orderBy:asc">
+		<tr ng-repeat="sheet in filteredParticipantsResults | orderBy:asc|filter:search">
 			<td >
 				<span ng-show="!showEdit">{{sheet.projectName}}</span>
 				<span ng-show="showEdit" ><input class="form-control" id={{sheet.projectId}} type="text" ng-model="sheet.projectName"  ng-blur="onBlur(sheet.projectId)"></span>
