commit for pagination

--- a/MitosisTimesheet/src/main/webapp/html/account.html
+++ b/MitosisTimesheet/src/main/webapp/html/account.html
@@ -34,7 +34,7 @@
 	<h2 style="margin-left: 0;">My Account</h2>
 	
    <div class="form-profile" style="margin-top: 10%;">
-    <form class="form-horizontal" role="form" ng-submit="edituserdetails()">
+    <form class="form-horizontal" role="form" ng-submit="checkuserdetails()">
     <div class="form-group">
       <label class="control-label col-sm-2">Full Name:</label>
       <div class="col-sm-10 col-md-4 col-lg-4 profile-value">
