--- a/MitosisTimesheet/src/main/webapp/html/project.html
+++ b/MitosisTimesheet/src/main/webapp/html/project.html
@@ -97,7 +97,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="sheet in filteredParticipantsResults | orderBy:asc|filter:search">
+		<tr ng-repeat="sheet in filteredParticipantsResults =(projectlist | filter:search) | startFrom:(currentPage-1)*maxSize | limitTo:maxSize| orderBy:asc">
 			<td >
 				<span ng-show="!showEdit">{{sheet.projectName}}</span>
 				<span ng-show="showEdit" ><input class="form-control" id={{sheet.projectId}} type="text" ng-model="sheet.projectName"  ng-blur="onBlur(sheet.projectId)"></span>
@@ -152,7 +152,10 @@
 	</tbody>
 </table>
 
-<pagination  total-items="totalItems" ng-model="currentPage" max-size="maxSize" items-per-page="numPerPage" class="pagination-sm" boundary-links="true"></pagination>
+<pagination data-num-pages="noOfPages" total-items="totalItems" ng-model="currentPage" max-size="maxSize" data-current-page="currentPage" items-per-page="numPerPage" class="pagination-sm" boundary-links="true"></pagination>
+<!-- 	 <pagination data-num-pages="noOfPages" data-boundary-links="true"  max-size="maxSize"  data-previous-text="&laquo;" data-next-text="&raquo;"></pagination> -->
+
+
 </div>
 <div class="alert-msg col-xs-12 col-sm-6"><p class="alert-success"></p></div>
  <div class="alert-msg1 col-xs-12 col-sm-6"><p class="alert-danger"></p></div>
